--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="./css/index.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { line-height:20px;background:rgba(0,0,0,.1);position: fixed;bottom:0;font-size: 11px; text-align: center;width:100%;height:20px; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <main>
+    <div class="card">
+      <img src="./images/image-qr-code.png" alt="image-qr-code">
+      <h3>Improve your front-end skills by building projects</h3>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.fiverr.com/zak00aria/convert-psd-or-figma-sketch-or-xd-design-into-html5-and-css3">zak00aria</a>.
   </div>
 </body>
 </html>
