--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <main>
     <div class="card">
       <img src="./images/image-qr-code.png" alt="image-qr-code">
-      <h3>Improve your front-end skills by building projects</h3>
+      <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </main>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.fiverr.com/zak00aria/convert-psd-or-figma-sketch-or-xd-design-into-html5-and-css3">zak00aria</a>.
-  </div>
+  </footer>
 </body>
 </html>
