--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./css/index.css">
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
 
@@ -18,17 +19,17 @@
   <nav>
     <div class="nav-container">
       <a href="/" class="logo"><img src="./images/logo.svg" alt="snap"></a>
-      <div class="nav-list">
-        <div class="dropdown closed">
+      <div class="nav-list only-desktop">
+        <div class="dropdown">
           <span>Features</span>
           <div class="drop-menu">
-            <a href="#">Todo List</a>
-            <a href="#">Calender</a>
-            <a href="#">Reminders</a>
-            <a href="#">Planning</a>
+            <a href="#"><img src="./images/icon-todo.svg" alt=""><span>Todo List</span></a>
+            <a href="#"><img src="./images/icon-calendar.svg" alt=""><span>Calender</span></a>
+            <a href="#"><img src="./images/icon-reminders.svg" alt=""><span>Reminders</span></a>
+            <a href="#"><img src="./images/icon-planning.svg" alt=""><span>Planning</span></a>
           </div>
         </div>
-        <div class="dropdown closed">
+        <div class="dropdown">
           <span>Company</span>
           <div class="drop-menu">
             <a href="#">History</a>
@@ -39,33 +40,30 @@
         <a href="#" class="link">Careers</a>
         <a href="#" class="link">About</a>
       </div>
-      <div class="user-nav-list">
+      <div class="user-nav-list only-desktop">
         <a href="" class="login">Login</a>
         <a href="" class="register">Register</a>
       </div>
     </div>
   </nav>
   <main>
-    <section>
+    <section class="hero">
       <div class="container">
         <div>
-          <div></div>
+          <div>
+            <h1>Make remote work</h1>
+            <p>
+              Get your team in sync, no matter your location. Streamline processes, 
+              create team rituals, and watch productivity soar.
+            </p>
+            <a href="">Learn more</a>
+          </div>
           <img src="./images/image-hero-desktop.png" alt="" class="only-desktop">
           <img src="./images/image-hero-mobile.png" alt="" class="only-mobile">
         </div>
       </div>
     </section>
   </main>
-  
-  
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
   <footer class="attribution">
     <div class="container">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
